Create search person, and add validation when input phone number.